# maverik_portfolio

./: .gitignore  README.md  pyproject.toml
data/: dates_range.csv  symbols.csv
maverik_portfolio/: __init__.py  api.py  get_data_from_eodhd.py  get_data_from_fmp.py  merge_hd_symbols.py  optimize.py  schemas.py
maverik_portfolio/models/: max_ratio_model  max_return_model  min_risk_model
