[project]
name = "maverik_portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.8",
    "skfolio>=0.4.1",
    "joblib>=1.4.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "fmpsdk>=20240330.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
